--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/97356b77d6.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="styles/style.css" />
     <title>Document</title>
   </head>
@@ -34,5 +38,6 @@
       laboriosam suscipit. Qui cupiditate ipsum saepe inventore minima
       accusantium sapiente mollitia odio maxime?
     </p>
+    <i class="fa-brands fa-instagram"></i>
   </body>
 </html>
