--- a/index.html
+++ b/index.html
@@ -29,15 +29,13 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello world</h1>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam dicta
-      mollitia perspiciatis facilis, delectus dolor corrupti nulla? Molestiae,
-      mollitia recusandae accusamus labore eveniet atque ut velit veritatis
-      laudantium repudiandae consectetur iste ad quasi minima id ducimus quas
-      laboriosam suscipit. Qui cupiditate ipsum saepe inventore minima
-      accusantium sapiente mollitia odio maxime?
-    </p>
-    <i class="fa-brands fa-instagram"></i>
+    <div class="hero">
+      <p>Hello, I am</p>
+      <h1>Małgorzata Wajs</h1>
+      <h2 class="mb-5">Front-end developer based in Poland</h2>
+      <div>
+        <a href="#" class="btn btn-branding">Contact me</a>
+      </div>
+    </div>
   </body>
 </html>
