Integrated homepage content design

--- a/index.html
+++ b/index.html
@@ -37,5 +37,50 @@
         <a href="#" class="btn btn-branding">Contact me</a>
       </div>
     </div>
+    <p class="text-center m-5">
+      Featured Projects are my best choice of projects to show
+    </p>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/photography.jpg" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Photography Project</h2>
+            <p class="mb-5 text-muted">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
+              ullam tempora dignissimos? Quos maiores ex quam consequuntur,
+              voluptas consectetur voluptatum nam accusamus labore asperiores
+              dolore vitae? Facilis nostrum tempora pariatur, reiciendis quaerat
+              ab, optio quo eos tempore saepe quasi. Incidunt pariatur aliquam
+              beatae magnam labore laudantium facilis qui saepe fuga!
+            </p>
+            <a href="" class="btn btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Weather Project</h2>
+            <p class="mb-5 text-muted">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
+              ullam tempora dignissimos? Quos maiores ex quam consequuntur,
+              voluptas consectetur voluptatum nam accusamus labore asperiores
+              dolore vitae? Facilis nostrum tempora pariatur, reiciendis quaerat
+              ab, optio quo eos tempore saepe quasi. Incidunt pariatur aliquam
+              beatae magnam labore laudantium facilis qui saepe fuga!
+            </p>
+            <a href="" class="btn btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+
+        <div class="col d-none d-lg-block">
+          <img src="images/weather.jpg" class="img-fluid" alt="" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
