Created about subpage

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles/style.css" />
-    <title>Document</title>
+    <title>Małgorzata Wajs' portfolio</title>
   </head>
   <body>
     <div class="hero">
