Created work page

--- a/work.html
+++ b/work.html
@@ -31,9 +31,19 @@
   <body>
     <div class="content container">
       <div class="content-inner">
-        <h1 class="mb-4">Hi I am Małgorzata Wajs</h1>
-
-        <h2 class="mb-4">Frontend developer, based in Poland.</h2>
+        <h1 class="mb-5">Take a look at what I've been working on!</h1>
+        <div class="row">
+          <div class="col-md-6 mb-4">
+            <img src="images/photography.jpg" class="img-fluid mb-3" alt="" />
+            <h3 class="text-center m-0">Photography project</h3>
+            <p class="text-center text-muted">Built with HTM, CSS and JS</p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img src="images/weather.jpg" class="img-fluid mb-3" alt="" />
+            <h3 class="text-center m-0">Weather project</h3>
+            <p class="text-center text-muted">Built with HTML, CSS and JS</p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
