Implemented nav bar to all subpages

--- a/about.html
+++ b/about.html
@@ -29,6 +29,17 @@
     <title>Małgorzata Wajs' portfolio</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <img src="images/logo.jpg" class="logo d-none d-md-block" alt="" />
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li class="active"><a href="about.html">About</a></li>
+          <li><a href="work.html">Work</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
     <div class="content container">
       <h1 class="mb-4">Hi I am Małgorzata Wajs</h1>
       <div class="row">
