--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <nav class="d-flex justify-content-between">
         <img src="images/logo.jpg" class="logo d-none d-md-block" alt="" />
         <ul>
-          <li class="active"><a href="index.html">Home</a></li>
+          <li class="active"><a href="/">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="work.html">Work</a></li>
           <li><a href="contact.html">Contact</a></li>
