Added footer and responsiveness

--- a/index.html
+++ b/index.html
@@ -92,6 +92,33 @@
           <img src="images/weather.jpg" class="img-fluid" alt="" />
         </div>
       </div>
+      <footer>
+        <div
+          class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+        >
+          <div>
+            <h4>Work inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="" class="btn btn-branding mt-3">Contact me</a>
+          </div>
+        </div>
+        <div class="email-link mb-4">
+          <a href="mailto:mawajs@o2.pl">mawajs@o2.pl</a>
+        </div>
+        <div class="social-links">
+          <a href="https://www.instagram.com/the.road.goes.on" target="_blank">
+            <i class="fab fa-instagram"></i
+          ></a>
+          <a href="https://www.github.com/malgorzatawajs" target="_blank">
+            <i class="fab fa-github"></i
+          ></a>
+          <a href="https://www.twitter.com" target="_blank">
+            <i class="fab fa-twitter"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
