--- a/about.html
+++ b/about.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="This is a portfolio of a front-end developer from Poland"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -33,10 +37,12 @@
       <nav class="d-flex justify-content-between">
         <img src="images/logo.jpg" class="logo d-none d-md-block" alt="" />
         <ul>
-          <li><a href="/">Home</a></li>
-          <li class="active"><a href="about.html">About</a></li>
-          <li><a href="work.html">Work</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="/" title="Homepage">Home</a></li>
+          <li class="active">
+            <a href="about.html" title="Get to know me">About</a>
+          </li>
+          <li><a href="work.html" title="See my projects">Work</a></li>
+          <li><a href="contact.html" title="Contact me">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -54,14 +60,16 @@
               soluta laborum rem voluptatibus, mollitia consequatur enim qui,
               accusantium molestias ea natus magnam. Est!
             </p>
-            <a href="" class="btn btn-branding">Check out my work</a>
+            <a href="work.html" class="btn btn-branding" title="My projects"
+              >Check out my work</a
+            >
           </div>
         </div>
         <div class="col-md-6">
           <img
             src="images/me.jpg"
             class="my-photo mt-4 img-fluid rounded"
-            alt=""
+            alt="This is me"
           />
         </div>
       </div>
