--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="This is a portfolio of a front-end developer from Poland"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -33,10 +37,12 @@
       <nav class="d-flex justify-content-between">
         <img src="images/logo.jpg" class="logo d-none d-md-block" alt="" />
         <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="work.html">Work</a></li>
-          <li class="active"><a href="contact.html">Contact</a></li>
+          <li><a href="/" title="Homepage">Home</a></li>
+          <li><a href="about.html" title="Get to know me">About</a></li>
+          <li><a href="work.html" title="See my projects">Work</a></li>
+          <li class="active">
+            <a href="contact.html" title="Contact me">Contact</a>
+          </li>
         </ul>
       </nav>
     </div>
@@ -48,10 +54,15 @@
           <a href="mailto:mawajs@o2.pl">mawajs@o2.pl</a>
         </p>
         <h3>Twitter <i class="fa-brands fa-twitter"></i></h3>
-        <p><a href="" target="_blank">@rrtyuisfrhtryju</a></p>
+        <p>
+          <a href="" target="_blank" title="My Twitter">@rrtyuisfrhtryju</a>
+        </p>
         <h3>Instagram <i class="fa-brands fa-instagram"></i></h3>
         <p>
-          <a href="https://www.instagram.com/the.road.goes.on" target="_blank"
+          <a
+            href="https://www.instagram.com/the.road.goes.on"
+            title="My Instagram"
+            target="_blank"
             >@the.road.goes.on</a
           >
         </p>
