--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="This is a portfolio of a front-end developer from Poland"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -33,10 +37,10 @@
       <nav class="d-flex justify-content-between">
         <img src="images/logo.jpg" class="logo d-none d-md-block" alt="" />
         <ul>
-          <li class="active"><a href="/">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="work.html">Work</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li class="active"><a href="/" title="Homepage">Home</a></li>
+          <li><a href="about.html" title="Get to know me">About</a></li>
+          <li><a href="work.html" title="See my projects">Work</a></li>
+          <li><a href="contact.html" title="Contact me">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -45,7 +49,9 @@
       <h1>Małgorzata Wajs</h1>
       <h2 class="mb-5">Front-end developer based in Poland</h2>
       <div>
-        <a href="contact.html" class="btn btn-branding">Contact me</a>
+        <a href="contact.html" class="btn btn-branding" title="Contact me"
+          >Contact me</a
+        >
       </div>
     </div>
     <p class="text-center m-5">
@@ -54,7 +60,11 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/photography.jpg" class="img-fluid" alt="" />
+          <img
+            src="images/photography.jpg"
+            class="img-fluid"
+            alt="Photography project"
+          />
         </div>
         <div class="col">
           <div class="project-description">
@@ -89,7 +99,7 @@
         </div>
 
         <div class="col d-none d-lg-block">
-          <img src="images/weather.jpg" class="img-fluid" alt="" />
+          <img src="images/weather.jpg" class="img-fluid" alt="Weather app" />
         </div>
       </div>
       <footer>
@@ -105,16 +115,24 @@
           </div>
         </div>
         <div class="email-link mb-4">
-          <a href="mailto:mawajs@o2.pl">mawajs@o2.pl</a>
+          <a href="mailto:mawajs@o2.pl" title="E-mail me">mawajs@o2.pl</a>
         </div>
         <div class="social-links">
-          <a href="https://www.instagram.com/the.road.goes.on" target="_blank">
+          <a
+            href="https://www.instagram.com/the.road.goes.on"
+            title="My Instagram"
+            target="_blank"
+          >
             <i class="fab fa-instagram"></i
           ></a>
-          <a href="https://www.github.com/malgorzatawajs" target="_blank">
+          <a
+            href="https://www.github.com/malgorzatawajs"
+            title="My GitHub"
+            target="_blank"
+          >
             <i class="fab fa-github"></i
           ></a>
-          <a href="https://www.twitter.com" target="_blank">
+          <a href="https://www.twitter.com" title="My Twitter" target="_blank">
             <i class="fab fa-twitter"></i
           ></a>
         </div>
