--- a/work.html
+++ b/work.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="This is a portfolio of a front-end developer from Poland"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -33,10 +37,12 @@
       <nav class="d-flex justify-content-between">
         <img src="images/logo.jpg" class="logo d-none d-md-block" alt="" />
         <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li class="active"><a href="work.html">Work</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="/" title="Homepage">Home</a></li>
+          <li><a href="about.html" title="Get to know me">About</a></li>
+          <li class="active">
+            <a href="work.html" title="See my projects">Work</a>
+          </li>
+          <li><a href="contact.html" title="Contact me">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -45,12 +51,20 @@
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
         <div class="row">
           <div class="col-md-6 mb-4">
-            <img src="images/photography.jpg" class="img-fluid mb-3" alt="" />
+            <img
+              src="images/photography.jpg"
+              class="img-fluid mb-3"
+              alt="Photography project"
+            />
             <h3 class="text-center m-0">Photography project</h3>
             <p class="text-center text-muted">Built with HTM, CSS and JS</p>
           </div>
           <div class="col-md-6 mb-4">
-            <img src="images/weather.jpg" class="img-fluid mb-3" alt="" />
+            <img
+              src="images/weather.jpg"
+              class="img-fluid mb-3"
+              alt="Weather App"
+            />
             <h3 class="text-center m-0">Weather project</h3>
             <p class="text-center text-muted">Built with HTML, CSS and JS</p>
           </div>
