Added footer on all subpages

--- a/index.html
+++ b/index.html
@@ -136,6 +136,13 @@
             <i class="fab fa-twitter"></i
           ></a>
         </div>
+        <p class="text-center mt-4">
+          This project was coded by
+          <a href="https://www.shecodes.io">SheCodes</a> and
+          <a href="https://github.com/malgorzatawajs/portfolio"
+            >Małgorzata Wajs</a
+          >
+        </p>
       </footer>
     </div>
   </body>
