--- a/contact.html
+++ b/contact.html
@@ -67,6 +67,48 @@
           >
         </p>
       </div>
+      <footer>
+        <div
+          class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+        >
+          <div>
+            <h4>Work inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="" class="btn btn-branding mt-3">Contact me</a>
+          </div>
+        </div>
+        <div class="email-link mb-4">
+          <a href="mailto:mawajs@o2.pl" title="E-mail me">mawajs@o2.pl</a>
+        </div>
+        <div class="social-links">
+          <a
+            href="https://www.instagram.com/the.road.goes.on"
+            title="My Instagram"
+            target="_blank"
+          >
+            <i class="fab fa-instagram"></i
+          ></a>
+          <a
+            href="https://www.github.com/malgorzatawajs"
+            title="My GitHub"
+            target="_blank"
+          >
+            <i class="fab fa-github"></i
+          ></a>
+          <a href="https://www.twitter.com" title="My Twitter" target="_blank">
+            <i class="fab fa-twitter"></i
+          ></a>
+        </div>
+        <p class="text-center mt-4">
+          This project was coded by
+          <a href="https://www.shecodes.io">SheCodes</a> and
+          <a href="https://github.com/malgorzatawajs/portfolio"
+            >Małgorzata Wajs</a
+          >
+        </p>
+      </footer>
     </div>
   </body>
 </html>
